# He3Detector

./: CMakeLists.txt  DT.mac  detector.tg  main.cpp
include/: EventAction.h  EventAction.hh  FTFP_BERT_LE.hh  Generator.h  He3GasMix.h  LineProcessor.h  PrimaryGeneratorAction.h  PrimaryGeneratorMessenger.hh  RunAction.hh  RunManager.h  SaveAndResetEvent.h  StackingAction.h  SteppingVerbose.h  TextDetectorBuilder.h  detector.h
src/: ExTGDetectorConstruction.cc  FTFP_BERT_LE.cpp  He3GasMix.cpp  LineProcessor.cpp  RunManager.cpp  SaveAndResetEvent.cpp  StackingAction.cc  SteppingVerbose.cc  TextDetectorBuilder.cpp  detector.cpp
